--- a/playlists/ironskillet_panorama_notshared_security_policies_10_0.skillet.yaml
+++ b/playlists/ironskillet_panorama_notshared_security_policies_10_0.skillet.yaml
@@ -57,7 +57,7 @@ snippets:
         xpath: /config/devices/entry[@name='localhost.localdomain']/device-group/entry[@name='{{DEVICE_GROUP}}']/profiles/spyware
       - name: ironskillet_spyware_alert_all
         xpath: /config/devices/entry[@name='localhost.localdomain']/device-group/entry[@name='{{DEVICE_GROUP}}']/profiles/spyware
-      - name: ironskillet_spyware_exception
+      - name: ironskillet_exception
         xpath: /config/devices/entry[@name='localhost.localdomain']/device-group/entry[@name='{{DEVICE_GROUP}}']/profiles/spyware
   - name: panorama_profiles_vulnerability_10_0
     include: panorama_profiles_vulnerability_10_0
